# protocol-core

./: Cargo.toml
src/: bak  lib.rs  main.rs
src/core/: cache.rs  macro_plugin.rs  mod.rs  raw.rs  raw_impl.rs  reader.rs  type_converter.rs  writer.rs
src/core/parts/: placeholder.rs  raw_capsule.rs  raw_chamber.rs  rawfield.rs  traits.rs  transport_carrier.rs  transport_pair.rs
src/defi/: bridge.rs  crc_enum.rs  error.rs  mod.rs
src/defi/error/: hex_digest_error.rs  mod.rs
src/digester/: aes_digester.rs  md5_digester.rs  mod.rs
src/utils/: crc_util.rs  hex_util.rs  math_util.rs  mod.rs  timestamp_util.rs
