[package]
name = "protocol-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
chrono = "0.4.42"
cipher = { version = "0.4.4", features = ["block-padding"] }
crc = "3.3.0"
ecb = "0.1.2"
getset = "0.1.6"
hex = "0.4.3"
md5 = "0.8.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
